force-app/main/default/objects/Lead/fields/TXT_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>TXT_CNPJ__c</fullName>
    <label>CNPJ</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>