force-app/main/default/objects/Lead/fields/TXT_Razao_Social__c.field-meta.xml
<CustomField>
    <fullName>TXT_Razao_Social__c</fullName>
    <label>Razão Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>