force-app/main/default/objects/Lead/fields/TXT_situacaoCadastral__c.field-meta.xml
<CustomField>
    <fullName>TXT_situacaoCadastral__c</fullName>
    <label>Situaçcão Cadastral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>